--- a/Project.toml
+++ b/Project.toml
@@ -14,4 +14,5 @@ LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 Measures = "442fdcdd-2543-5da2-b0f3-8c86c306513e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PredefinedDynamicalSystems = "31e2f376-db9e-427a-b76e-a14f56347a14"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
